// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collection component should match the previous snapshot 1`] = `
<div>
  <div
    className="gRaYYP"
  >
    <span
      className="drgkCg"
    >
      <h3
        onClick={[Function]}
      />
      <button
        className="pull-right exyKyC"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="eMVcPd"
        >
          <div
            className="ddxWyy"
          />
          <span
            className="jsYWMN"
          >
            Change name
          </span>
        </div>
        <div
          className="jsiZnw clearfix"
        >
          <i
            className="fa fa-pencil"
            role="presentation"
          />
        </div>
      </button>
      <button
        className="pull-right exyKyC"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="eMVcPd"
        >
          <div
            className="ddxWyy"
          />
          <span
            className="jsYWMN"
          >
            Delete
          </span>
        </div>
        <div
          className="jsiZnw clearfix"
        >
          <i
            className="fa fa-trash"
            role="presentation"
          />
        </div>
      </button>
      <hr />
    </span>
    <div
      aria-expanded={null}
      className="collapse in"
    >
      <div>
        <div
          className="kzXmMh"
        >
          <div
            className="list-group"
          >
            <div
              className="list-group-item"
            >
              <div
                className="clpLtD"
              >
                <button
                  className="exyKyC"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <div
                    className="eMVcPd"
                  >
                    <div
                      className="ddxWyy"
                    />
                    <span
                      className="jsYWMN"
                    >
                      Toggle edit
                    </span>
                  </div>
                  <div
                    className="jsiZnw clearfix"
                  >
                    <i
                      className="fa fa-cog"
                      role="presentation"
                    />
                  </div>
                </button>
                <button
                  className="exyKyC"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <div
                    className="eMVcPd"
                  >
                    <div
                      className="ddxWyy"
                    />
                    <span
                      className="jsYWMN"
                    >
                      Minimize
                    </span>
                  </div>
                  <div
                    className="jsiZnw clearfix"
                  >
                    <i
                      className="fa fa-minus"
                      role="presentation"
                    />
                  </div>
                </button>
              </div>
              <div
                className="ejiwLo"
                onClick={[Function]}
                onDoubleClick={[Function]}
              >
                <div>
                  <h4>
                    POST
                  </h4>
                  www.foo.no
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collections component should match the previous snapshot 1`] = `
<div
  className="panel panel-default"
  id={undefined}
>
  <div
    className="panel-heading"
  >
    <span
      className="clearfix"
    >
      <button
        className="pull-right exyKyC"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="eMVcPd"
        >
          <div
            className="ddxWyy"
          />
          <span
            className="jsYWMN"
          >
            Add new collection
          </span>
        </div>
        <div
          className="jsiZnw clearfix"
        >
          <i
            className="fa fa-plus"
            role="presentation"
          />
        </div>
      </button>
    </span>
  </div>
  <div
    className="panel-body"
  >
    <span>
      <div>
        <div
          className="gRaYYP"
        >
          <span
            className="cznwYF"
          >
            <h3
              onClick={[Function]}
            >
              Collection
            </h3>
            <button
              className="pull-right exyKyC"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="eMVcPd"
              >
                <div
                  className="ddxWyy"
                />
                <span
                  className="jsYWMN"
                >
                  Change name
                </span>
              </div>
              <div
                className="jsiZnw clearfix"
              >
                <i
                  className="fa fa-pencil"
                  role="presentation"
                />
              </div>
            </button>
            <button
              className="pull-right exyKyC"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="eMVcPd"
              >
                <div
                  className="ddxWyy"
                />
                <span
                  className="jsYWMN"
                >
                  Delete
                </span>
              </div>
              <div
                className="jsiZnw clearfix"
              >
                <i
                  className="fa fa-trash"
                  role="presentation"
                />
              </div>
            </button>
            <hr />
          </span>
          <div
            aria-expanded={null}
            className="collapse"
          >
            <div>
              <div
                className="kzXmMh"
              >
                <div
                  className="list-group"
                >
                  <div
                    className="list-group-item"
                  >
                    <div
                      className="clpLtD"
                    >
                      <button
                        className="exyKyC"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="eMVcPd"
                        >
                          <div
                            className="ddxWyy"
                          />
                          <span
                            className="jsYWMN"
                          >
                            Toggle edit
                          </span>
                        </div>
                        <div
                          className="jsiZnw clearfix"
                        >
                          <i
                            className="fa fa-cog"
                            role="presentation"
                          />
                        </div>
                      </button>
                      <button
                        className="exyKyC"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="eMVcPd"
                        >
                          <div
                            className="ddxWyy"
                          />
                          <span
                            className="jsYWMN"
                          >
                            Minimize
                          </span>
                        </div>
                        <div
                          className="jsiZnw clearfix"
                        >
                          <i
                            className="fa fa-minus"
                            role="presentation"
                          />
                        </div>
                      </button>
                    </div>
                    <div
                      className="ejiwLo"
                      onClick={[Function]}
                      onDoubleClick={[Function]}
                    >
                      <div>
                        <h4>
                          POST
                        </h4>
                        www.foo.no
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          className="gRaYYP"
        >
          <span
            className="cznwYF"
          >
            <h3
              onClick={[Function]}
            >
              Collection 2
            </h3>
            <button
              className="pull-right exyKyC"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="eMVcPd"
              >
                <div
                  className="ddxWyy"
                />
                <span
                  className="jsYWMN"
                >
                  Change name
                </span>
              </div>
              <div
                className="jsiZnw clearfix"
              >
                <i
                  className="fa fa-pencil"
                  role="presentation"
                />
              </div>
            </button>
            <button
              className="pull-right exyKyC"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="eMVcPd"
              >
                <div
                  className="ddxWyy"
                />
                <span
                  className="jsYWMN"
                >
                  Delete
                </span>
              </div>
              <div
                className="jsiZnw clearfix"
              >
                <i
                  className="fa fa-trash"
                  role="presentation"
                />
              </div>
            </button>
            <hr />
          </span>
          <div
            aria-expanded={null}
            className="collapse"
          >
            <div>
              <div
                className="kzXmMh"
              >
                <div
                  className="list-group"
                >
                  <div
                    className="list-group-item"
                  >
                    <div
                      className="clpLtD"
                    >
                      <button
                        className="exyKyC"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="eMVcPd"
                        >
                          <div
                            className="ddxWyy"
                          />
                          <span
                            className="jsYWMN"
                          >
                            Toggle edit
                          </span>
                        </div>
                        <div
                          className="jsiZnw clearfix"
                        >
                          <i
                            className="fa fa-cog"
                            role="presentation"
                          />
                        </div>
                      </button>
                      <button
                        className="exyKyC"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="eMVcPd"
                        >
                          <div
                            className="ddxWyy"
                          />
                          <span
                            className="jsYWMN"
                          >
                            Minimize
                          </span>
                        </div>
                        <div
                          className="jsiZnw clearfix"
                        >
                          <i
                            className="fa fa-minus"
                            role="presentation"
                          />
                        </div>
                      </button>
                    </div>
                    <div
                      className="ejiwLo"
                      onClick={[Function]}
                      onDoubleClick={[Function]}
                    >
                      <div>
                        <h4>
                          POST
                        </h4>
                        www.foo.no
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                className="kzXmMh"
              >
                <div
                  className="list-group"
                >
                  <div
                    className="list-group-item"
                  >
                    <div
                      className="clpLtD"
                    >
                      <button
                        className="exyKyC"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="eMVcPd"
                        >
                          <div
                            className="ddxWyy"
                          />
                          <span
                            className="jsYWMN"
                          >
                            Toggle edit
                          </span>
                        </div>
                        <div
                          className="jsiZnw clearfix"
                        >
                          <i
                            className="fa fa-cog"
                            role="presentation"
                          />
                        </div>
                      </button>
                      <button
                        className="exyKyC"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="eMVcPd"
                        >
                          <div
                            className="ddxWyy"
                          />
                          <span
                            className="jsYWMN"
                          >
                            Minimize
                          </span>
                        </div>
                        <div
                          className="jsiZnw clearfix"
                        >
                          <i
                            className="fa fa-minus"
                            role="presentation"
                          />
                        </div>
                      </button>
                    </div>
                    <div
                      className="ejiwLo"
                      onClick={[Function]}
                      onDoubleClick={[Function]}
                    >
                      <div>
                        <h4>
                          POST
                        </h4>
                        www.bar.no
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                className="kzXmMh"
              >
                <div
                  className="list-group"
                >
                  <div
                    className="list-group-item"
                  >
                    <div
                      className="clpLtD"
                    >
                      <button
                        className="exyKyC"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="eMVcPd"
                        >
                          <div
                            className="ddxWyy"
                          />
                          <span
                            className="jsYWMN"
                          >
                            Toggle edit
                          </span>
                        </div>
                        <div
                          className="jsiZnw clearfix"
                        >
                          <i
                            className="fa fa-cog"
                            role="presentation"
                          />
                        </div>
                      </button>
                      <button
                        className="exyKyC"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="eMVcPd"
                        >
                          <div
                            className="ddxWyy"
                          />
                          <span
                            className="jsYWMN"
                          >
                            Minimize
                          </span>
                        </div>
                        <div
                          className="jsiZnw clearfix"
                        >
                          <i
                            className="fa fa-minus"
                            role="presentation"
                          />
                        </div>
                      </button>
                    </div>
                    <div
                      className="ejiwLo"
                      onClick={[Function]}
                      onDoubleClick={[Function]}
                    >
                      <div>
                        <h4>
                          POST
                        </h4>
                        www.baz.no
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;
